--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -517,8 +517,21 @@ video {
   visibility: collapse;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .flex {
@@ -531,6 +544,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .flex-row {
@@ -547,6 +564,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -590,12 +611,20 @@ video {
   padding-left: 1.25rem;
 }
 
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-xl {
@@ -605,6 +634,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .antialiased {
