--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -542,10 +542,6 @@ video {
   height: 100%;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-11 {
   height: 2.75rem;
 }
@@ -556,10 +552,6 @@ video {
 
 .w-1\/3 {
   width: 33.333333%;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .w-auto {
@@ -592,6 +584,10 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-r {
